<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/transfer"
        android:layout_marginTop="20dp"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtYourAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:background="@drawable/background_edt"
        android:hint="@string/enter_your_address"
        android:inputType="text"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtYourMnemonics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_edt"
        android:hint="@string/enter_your_mnemonics"
        android:inputType="text"
        android:textSize="15sp"
        android:maxLines="1"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtReceiverAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:background="@drawable/background_edt"
        android:hint="@string/receiver_address"
        android:inputType="text"
        android:maxLines="1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/background_edt"
        android:hint="@string/enter_amount"
        android:textSize="15sp"
        android:inputType="number"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/send" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/view_in_explorer"
        android:visibility="gone" />
</LinearLayout>